Wed May 19 17:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.h (RUBY_VERSION_TEENY): revert to API version 1.9.1.

Wed May 19 10:46:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (argv_size): merged into join_argv() to maintain the
	  agreement with it.  removed code has a calclulation bug.
	  fixed [Bug#2388]

	* win32/win32.c (join_argv): calc and return the length of joined
	  argv.
	  the cause of the original bug was clarified by Masaya TARUI
	  <tarui AT prx.jp> and the solution was suggested by him, too.

Mon May 17 11:09:58 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#entries): returns pathname in
	  UTF-8 on Windows to allow FileUtils accessing all pathnames
	  internally.

Sun May 16 22:21:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (mnew): initialize a field.  a patch from Takahiro Kambe.
	  [ruby-dev:41312]

Sun May 16 17:16:09 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (proc_binding): don't propagative filename and line_no of
	  binding that is created from C level.  [ruby-dev:41322]

	* vm_eval.c (eval_string_with_cref): ditto.

Sun May 16 13:55:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_loaderror): use locale string, not ascii-8bit.

Sun May 16 21:14:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ruby/test_rubyoptions.rb (TestRubyOptions#test_segv_test):
	  fixes "NoMethodError: undefined method `[]=' for nil:NilClass"

Fri May 14 01:17:10 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_core.c (rb_thread_struct): add a field for sigaltstack.

	* thread_pthread.c (thread_start_func_1): initialize machine stack
	  information.

	* thread.c (thread_start_func_2): set sigaltstack for each sub thread.
	  [ruby-core:24540] [ruby-core:30207]

Thu May 13 07:37:49 2010  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/_sdbm.c: include unistd.h before sdbm.h for off_t.
	  fix compilation problem on FreeBSD 6.4.
